[tool.poetry]
name = "railway-langflow-template"
version = "0.1.0"
description = "This example starts up LangFlow"
authors = ["Gabriel Almeida <gabriel@logspace.ai>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
langflow = "~0.0.74"
wolframalpha = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
